feat: list of tags cannot be null