@@ -1,7 +1,5 @@
 package org.example.type.impl;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 import org.example.type.PhpType;
@@ -9,7 +7,7 @@ import org.jetbrains.annotations.NotNull;
 
 public record UnionType(@NotNull List<PhpType> types) implements PhpType {
     public UnionType {
-        types = Collections.unmodifiableList(new ArrayList<>(types));
+        types = List.copyOf(types);
     }
 
     @Override
